Copy updated and repair of max width on summary section

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -83,18 +83,18 @@
 
         <h2 class="project-overview-headline">Project overview</h2>
 
-        <p class="project-overview-copy">Genentech and Roche’s Floodlight MS, is app that allows patients living with MS to complete simple tasks on their devices to capture data that tracks disease progression and allows their providers to interpret  these objective measures through a provider portal. The Floodlight MS app closes gaps in communication and reduces subjectivity in patient reported symptoms. My team was involved in two phases of the website that partners with the app.</p>
+        <p class="project-overview-copy">Genentech and Roche’s Floodlight MS is an app that allows patients living with MS to complete simple tasks on their devices to capture data that tracks disease progression and allows their providers to interpret  these objective measures through a provider portal. The Floodlight MS app closes gaps in communication and reduces subjectivity in patient reported symptoms. My team was involved in two phases of the website that partners with the app.</p>
 
         <h3 class="project-problem-headline">The problem</h3>
-        <p class="project-problem-statemnt">The true challenges came down to limited real estate and time. The first phase of of the site served as a pre-launch introduction to the Floodlight MS app and had minimal content. The brief called for the full launch website to have a much more robust content strategy,  which was directly in conflict with the imperative for a minimalistic layout with few pages. Additionally A highly consolidated timeline leading to launch required a new approach to    working efficiently.</p>
+        <p class="project-problem-statemnt">The true challenges came down to limited real estate and time. The first phase of of the site served as a pre-launch introduction to the Floodlight MS app and had minimal content. The brief called for the full launch website to have a much more robust content strategy,  which was directly in conflict with the imperative for a minimalistic layout with few pages. Additionally, a highly consolidated timeline leading to launch required a new approach to    working efficiently.</p>
 
         <h3 class="project-solution-headline">The solution</h3>
-        <p class="project-solution-statemnt">Careful consideration of the site architecture and collaboration between UX and copywriting allowed us to deliver robust content in a minimalist layout. We reassessed a legacy workflow between UX and creative direction and shifted our approach to minimize inefficiencies.  By partnering to work in succession with one file; UX and art significantly reduced the time required to transition wireframes into creative design.</p>
+        <p class="project-solution-statemnt">Careful consideration of the site architecture and collaboration between UX and copywriting allowed us to deliver robust content in a minimalist layout. We reassessed a legacy workflow between UX and creative direction and shifted our approach to minimize inefficiencies.  By partnering to work in succession with one Sketch file; UX and creative design significantly reduced the time required to transition wireframes into layouts ready for development.</p>
         <div class="role-deliverable-tool-grid">
           <div class="role-list-group">
             <h3 class="role-headline">Role</h3>
             <ul class="role-list">
-              <li><p>UX Design Lead</p></li>
+              <li><p>UX design lead</p></li>
             </ul>
           </div>
 
@@ -104,7 +104,7 @@
               <li><p>User stories</p></li>
               <li><p>Sitemap</p></li>
               <li><p>Wireframes</p></li>
-              <li><p>Functional Requirements Document</p></li>
+              <li><p>Functional specifications</p></li>
             </ul>
           </div>
 
@@ -121,7 +121,7 @@
 
     <section class="brief">
       <h2 class="brief-headline">Interpreting the brief</h2>
-      <p class= "brief-introduction">In the second phase of the Floodlight MS project, we were challenged to update the site, expanding from the one-page layout of the first phase and introducing a second page with deeper, more clinical content for providers. We were to build upon the established look and feel of the previous microsite but expand significantly upon the content, applying a mobile first approach.</p>
+      <p class= "brief-introduction">In the second phase of the Floodlight MS project, we were challenged to update the site, expanding from the one-page layout of the first phase and introducing a second page with deeper, more clinical content for providers. We were to build upon the established look and feel of the previous microsite, but expand significantly upon the content, applying a mobile first approach.</p>
       <h3 class="brief-list-title" >Key considerations included</h3>
       <ul class="brief-list-content">
         <li><p>The scalable, mobile first, site needs to be <strong>content rich, but visually light</strong>.</p></li>
@@ -154,7 +154,7 @@
         <img class="phase-1-wireframes-image" src="images/phase-1-wireframes.png" alt="Floodlight MS Phase-1 Wireframes"></img>
         <figcaption> Wireframes prepared by the phase one team</figcaption>
       </figure>
-      <p class="phase-1-communication">The two teams communicated on the challenges and opportunities that lied ahead with the second phase.<p>
+      <p class="phase-1-communication">The two teams communicated on the challenges and opportunities that lied ahead with the second phase. Valuable context around client direction during the first phase of the project helped to avoid the need for additional client touch-bases as new team members were introduced.<p>
       <h3 class="phase-1-infrastructure-headline">The site infrastructure of phase one</h3>
       <p class="phase-1-infrastructure">The phase 1 microsite included a single page format, with a single page with sections for People Living with MS, HCPS and Resources for both user types.</p>
       <h4 class="phase-1-sitemap-headline">Phase one sitemap with three key sections: Healthcare Provider, Patient and Resources</h4>
