Updated floodlight & global footer

--- a/my-work.html
+++ b/my-work.html
@@ -169,7 +169,7 @@
           <a href="https://www.twitter.com/jesstribble" target="_blank">
             <img src= "images/icons/icons8-twitter-500.png" alt="Twitter logo">
             </a>
-          <a href="contact.html" target="_blank">
+          <a href="contact-2.0.html" target="_blank">
             <img src="images/icons/icons8-email-envelope-500.png" alt="Mail Icon">
             </a>
       </div>
