Added content for the content audit section

--- a/nih.html
+++ b/nih.html
@@ -74,7 +74,7 @@
 
     <section class="hero">
 
-      <h1 class="hero-headline">National Institute of Health Office of Technology Transfer</h1>
+      <h1 class="hero-headline">National Institute of Health</br> Office of Technology Transfer</h1>
       <p class="hero-copy">The National Institute of Health Office of Technology Transfer manages the licensing of patented inventions from scientists at various governmental agencies, such as the National Cancer Institute (NCI) and the National Institute for Allergies and Infectious Disease (NIAID). I was tasked with redesigning their site to make it easier for users to successfully find and lisence technology.</p>
       <img class="case-study-hero-image" src="images/nih-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="300px"></img>
     </section>
@@ -155,20 +155,344 @@
         <img class= "content-snapshot-image" src="images/NIH/content-snapshot.png" alt="NIH Content Snapshot"></img>
         <figcaption> The XML Sitemap</figcaption>
       </figure>
+
       <h3 class="audit-navigation-headline">Pages anchored to navigation</h3>
       <p class="audit-navigation-content"><strong>132 pages</strong> are listed in primary and secondary navigation, excluding large groups of like-templated pages.</p>
       <ul class="navigation-audit-ist">
-        <li><p>Page title</p></li>
-        <li><p>URL</p></li>
-        <li><p>Main navigation</p></li>
-        <li><p>Submenu</p></li>
-        <li><p>Format</p></li>
-        <li><p>Recommendations/notes</p></li>
+        <li><p>Date captured</p>
+          <ul class="data-captured-sublist">
+            <li><p>Page title</p></li>
+            <li><p>URL</p></li>
+            <li><p>Main navigation</p></li>
+            <li><p>Submenu</p></li>
+            <li><p>Format</p></li>
+            <li><p>Recommendations/notes</p></li>
+          </ul>
       </ul>
       <figure class="content-navigation">
         <img class= "content-navigation-image" src="images/NIH/content-audit-navigation.png" alt="NIH Content audit navigation"></img>
         <figcaption>Auditing the Navigation structure</figcaption>
-      </figure> 
+      </figure>
+
+      <h3 class="audit-technology-abstracts-headline">Technology abstracts</h3>
+      <p class="audit-technology-abstracts-content"><strong>1,625 pages</strong> detail technology available for licensing.  The audit sampled the first 100 unfiltered search results.</p>
+      <ul class="technology-abstract-audit-list">
+
+        <li><p>Date captured</p>
+          <ul class="data-captured-sublist">
+            <li><p>Page title</p></li>
+            <li><p>URL</p></li>
+            <li><p>Main navigation</p></li>
+            <li><p>Submenu</p></li>
+            <li><p>Format</p></li>
+            <li><p><strong>Disease Area</strong></p></li>
+            <li><p><strong>Application</strong></p></li>
+            <li><p><strong>Development Stage</strong></p></li>
+            <li><p><strong>Technology</strong></p></li>
+            <li><p><strong>Institute</strong></p></li>
+            <li><p>Recommendations/notes</p></li>
+          </ul>
+      </ul>
+      <figure class="content-abstracts">
+        <img class="content-abstracts-image" src="images/NIH/content-audit-abstracts.png" alt="NIH Content audit abstracts"></img>
+        <figcaption>Auditing the Navigation structure</figcaption>
+      </figure>
+
+
+      <h3 class="audit-technology-abstracts-indexes-headline">Technology abstract indexes</h3>
+      <p class="audit-technology-abstracts-indexes-content"><strong>174 pre-made paginated search results pages</strong> list available technology abstracts.</p>
+
+      <ul class="technology-abstract-indexes-audit-filter-list">
+        <li><p>Date captured</p>
+          <ul class="data-captured-sublist">
+            <li><p>Unfiltered/p></li>
+            <li><p>Application</p></li>
+            <li><p>Disease area</p></li>
+            <li><p>Development stage</p></li>
+            <li><p>Keyword</p></li>
+            <li><p>Institute</p></li>
+          </ul>
+      </ul>
+
+      <ul class="technology-abstract-indexes-audit-list">
+        <li><p>Date captured</p>
+          <ul class="data-captured-sublist">
+            <li><p>Page title</p></li>
+            <li><p>URL</p></li>
+            <li><p>Main navigation</p></li>
+            <li><p>Submenu</p></li>
+            <li><p>Format</p></li>
+            <li><p>Recommendations/notes</p></li>
+          </ul>
+      </ul>
+
+      <figure class="content-abstracts-indexes">
+        <img class="content-abstracts-indexes-image" src="images/NIH/content-audit-abstract-indexes.png" alt="NIH Content audit abstract indexes"></img>
+        <figcaption>Auditing the technology abtract images</figcaption>
+      </figure>
+
+      <h3 class="audit-inventors-headline">Inventors</h3>
+      <p class="audit-inventors-content"><strong>3,608 pages</strong> list all inventions by each inventor.</p>
+      <ul class="inventor-audit-ist">
+        <li><p>Date captured</p>
+          <ul class="data-captured-sublist">
+            <li><p>Page title</p></li>
+            <li><p>URL</p></li>
+            <li><p>Main navigation</p></li>
+            <li><p>Submenu</p></li>
+            <li><p>Format</p></li>
+            <li><p>Recommendations/notes</p></li>
+          </ul>
+      </ul>
+      <figure class="content-inventors">
+        <img class= "content-inventors-image" src="images/NIH/content-audit-inventors.png" alt="NIH Content audit inventors"></img>
+        <figcaption>Auditing the inventor pages</figcaption>
+      </figure>
+
+      <h3 class="audit-products-headline">Products</h3>
+      <p class="audit-products-content"><strong>202 pages </strong>are in the product showcase including a table of contents and pages for each product.</p>
+      <ul class="products-audit-ist">
+        <li><p>Date captured</p>
+          <ul class="data-captured-sublist">
+            <li><p>Page title</p></li>
+            <li><p>URL</p></li>
+            <li><p>Main navigation</p></li>
+            <li><p>Submenu</p></li>
+            <li><p>Format</p></li>
+            <li><p><strong>Uses</strong></p></li>
+            <li><p><strong>HHS conttribution</strong></p></li>
+            <li><p><strong>Features</strong></p></li>
+            <li><p><strong>Inventors</strong></p></li>
+            <li><p><strong>HHS institute/agency</strong></p></li>
+            <li><p><strong>Licensee</strong></p></li>
+            <li><p><strong>Market launch</strong></p></li>
+            <li><p>Recommendations/notes</p></li>
+          </ul>
+      </ul>
+      <figure class="content-products">
+        <img class= "content-products-image" src="images/NIH/content-audit-products.png" alt="NIH Content audit products"></img>
+        <figcaption>Auditing the product pages</figcaption>
+      </figure>
+
+      <h3 class="audit-documents-headline">Documents</h3>
+      <p class="audit-documents-content"><strong>156 PDF & Word documents</strong> linked are to through out the site.</p>
+      <ul class="inventor-documents-ist">
+        <li><p>Date captured</p>
+          <ul class="data-captured-sublist">
+            <li><p>Page title</p></li>
+            <li><p>URL</p></li>
+            <li><p>Main navigation</p></li>
+            <li><p>Submenu</p></li>
+            <li><p>Format</p></li>
+            <li><p>Recommendations/notes</p></li>
+          </ul>
+      </ul>
+      <figure class="content-documents">
+        <img class= "content-documents-image" src="images/NIH/content-audit-documents.png" alt="NIH Content audit documnents"></img>
+        <figcaption>Auditing the documents</figcaption>
+      </figure>
+
+      <h3 class="audit-staff-headline">Staff</h3>
+      <p class="audit-staff-content"><strong>47 pages </strong>feature staff profiles and indexes of staff profiles organized by last initial.</p>
+      <ul class="inventor-staff-ist">
+        <li><p>Date captured</p>
+          <ul class="data-captured-sublist">
+            <li><p>Page title</p></li>
+            <li><p>URL</p></li>
+            <li><p>Main navigation</p></li>
+            <li><p>Submenu</p></li>
+            <li><p>Format</p></li>
+            <li><p>Recommendations/notes</p></li>
+          </ul>
+      </ul>
+      <figure class="content-staff">
+        <img class= "content-staff-image" src="images/NIH/content-audit-staff.png" alt="NIH Content audit staff"></img>
+        <figcaption>Auditing the staff listing pages</figcaption>
+      </figure>
+
+      <h3 class="audit-rss-headline">RSS Feeds</h3>
+      <p class="audit-inventors-content"><strong>66 RSS feed files (.xml)</strong> are available for addition to a user’s feed reader.</p>
+      <ul class="inventor-audit-ist">
+        <li><p>Date captured</p>
+          <ul class="data-captured-sublist">
+            <li><p>Page title</p></li>
+            <li><p>URL</p></li>
+            <li><p>Main navigation</p></li>
+            <li><p>Submenu</p></li>
+            <li><p>Format</p></li>
+            <li><p><strong>RSS Topic</strong></p></li>
+            <li><p>Recommendations/notes</p></li>
+          </ul>
+      </ul>
+      <figure class="content-rss">
+        <img class= "content-rss-image" src="images/NIH/content-audit-rss.png" alt="NIH Content audit rss feeds"></img>
+        <figcaption>Auditing the RSS feeds</figcaption>
+      </figure>
+
+      <h3 class="audit-news-headline">News</h3>
+      <p class="audit-newd-content"><strong>48 news & event articles</strong> highlight updates from OTT.</p>
+      <ul class="inventor-news-list">
+        <li><p>Date captured</p>
+          <ul class="data-captured-sublist">
+            <li><p>Page title</p></li>
+            <li><p>URL</p></li>
+            <li><p>Main navigation</p></li>
+            <li><p>Submenu</p></li>
+            <li><p>Format</p></li>
+            <li><p>Recommendations/notes</p></li>
+          </ul>
+      </ul>
+      <figure class="content-news">
+        <img class= "content-news-image" src="images/NIH/content-audit-news.png" alt="NIH Content audit news"></img>
+        <figcaption>Auditing the news pages</figcaption>
+      </figure>
+    </section>
+
+    <section class="content-audit-findings-and-recommendations">
+      <h2 class="content-audit-findings-headline">Content Audit Findings & Recommendations</h2>
+      <h3 class="audit-findings-list-headline">Key findings from the audit</h2>
+      <ul class="audit-findings-list">
+        <li><p>Technology abstracts not clearly labeled</p></li>
+        <li><p>Technology search filters not comprehensively covering all options</p></li>
+        <li><p>Breadcrumbs with dead end links for inventor index pages</p></li>
+        <li><p>RSS feed index not listing all feeds</p></li>
+        <li><p>Most articles are text only</p></li>
+        <li><p>Navigation doesn’t consistently guide the user</p></li>
+      </ul>
+
+      <h3 class="audit-recommendations-list-headline">Recommendations for enhancement</h2>
+      <ul class="audit-recommendations-list">
+        li><p>Technology abstract template</p></li>
+        <li><p>Search component & filter list options</p></li>
+        <li><p>Inventor index page template</p></li>
+        <li><p>RSS feed index page template</p></li>
+        <li><p>Article template</p></li>
+        <li><p>Sitewide navigation components</p></li>
+      </ul>
+
+      <h3 class="detailed-findings-headline">Detailed findings</h2>
+
+      <h4 class="page-findings-headline">The majority of site content lies in technology abstracts and inventor listings</h4>
+      <figure class="page-findings">
+        <img class= "page-findings-image" src="images/NIH/findings-pages.png" alt="page distribution findings"></img>
+        <figcaption>page distributions</figcaption>
+      </figure>
+
+      <h4 class="navigation-content-headline"> Navigation Content Distribution:  About OTT & Reports/Stats sections have the most navigational touchpoints.</h4>
+      <figure class="navigation-content-findings">
+        <img class= "navigation-content-findings-image" src="images/NIH/findings-navigation.png" alt="page distribution findings"></img>
+        <figcaption>Navigation content</figcaption>
+        <p><strong>Recommendation:</strong> Adjust navigation to encourage engagement with licensing related content</p>
+      </figure>
+
+      <h4 class="page-findings-headline">The majority of site content lies in technology abstracts and inventor listings</h4>
+      <figure class="page-findings">
+        <img class= "page-findings-image" src="images/NIH/findings-pages.png" alt="page distribution findings"></img>
+        <figcaption>page distributions</figcaption>
+        <p><strong>Recommendation</strong>: Update the technology abstract template to improve readability</p>
+      </figure>
+
+      <h4 class="abstract-findings-headline">Disease Area Focus of Technology Abstracts: A sample of 100 abstracts revealed that <strong>Cancer</strong> and <strong>Virology </strong>are most studied, but<strong>18% are difficult to classify</strong>.</h4>
+      <figure class="abstract-findings">
+        <img class= "abstract-findings-image" src="images/NIH/findings-abstracts.png" alt="page distribution findings"></img>
+        <figcaption>Technology abstract findings</figcaption>
+      </figure>
+
+      <h4 class="reviewing-abstrats-headline">How I Reviewed Technology Abstracts & challenges encountered</h4>
+      <ul class= reviewing-abstracts-list>
+        <li><p>Fixed-list search filters: include disease area, application, development stage, technology, institute/center, seeking collaboration</p></li>
+        <li><p>Disease area: (infectious disease (viral)) inferred from headline</p></li>
+        <li><p>Application: (vaccine) highlighted</p></li>
+        <li><p>Development stage: (available for license) hidden within introduction and does not clearly match search filter options</p></li>
+        <li><p>Technology: not highlighted, difficult to ascertain</p></li>
+        <li><p>Institute: Displayed with inventors, some inventors not associated with an institute</p></li>
+        <li><p>Free-form search filters: include reference number, inventor and keywords</p></li>
+        <li><p>Seeking collaboration: is highlighted with a brief narrative.</p></li>
+      </ul>
+      <figure class="reviewing-abstracts">
+        <img class= "reviewing-abstracts-image" src="images/NIH/findings-reviewing-abstracts.png" alt="page distribution findings"></img>
+        <figcaption>DIffculties in reviewing abstracts for the audit</figcaption>
+      </figure>
+
+      <h4 class="inventor-page-headline"><strong>37%</strong> of inventor inventory pages are currently not returning results.</h4>
+      <figure class="inventor-page-findings">
+        <img class= "inventor-page-findings-image" src="images/NIH/findings-inventors.png" alt="page distribution findings"></img>
+        <figcaption>inventor page findings</figcaption>
+      </figure>
+
+      <h4 class="reviewing-inventory-pages-headline">Discovering Broken Inventory Pages</h4>
+      <ul class= reviewing-inventory-pages-list>
+        <li><p>Technology abstract links to more inventions by inventor</p></li>
+        <li><p>Inventor’s inventory breadcrumbs include link to current page(3) and “NIH Opportunities from Inventor” (4).</p></li>
+        <li><p>This page is broken and returns no results.</p></li>
+        <li><p>This is broken and returns no results, resulting in 1,329 unnecessary internal links</p></li>
+      </ul>
+      <figure class="reviewing-inventory-pages">
+        <img class= "reviewing-inventory-pages-image" src="images/NIH/findings-inventory-pages.png" alt="page distribution findings"></img>
+        <figcaption>Probelms with inventory pages</figcaption>
+        <p>Recommendations: Verify path of all breadcrumbs and delete 1,329 broken inventor inventory pages</p>
+      </figure>
+
+      <h4 class="product-findings-headline"> Count of Product Releases by Institutes and Centers (ICs):<strong>4 out of 11</strong> ICs are responsible for<strong>94%</strong> of published product releases.</h4>
+      <p>Recommendations: Explore IC user experience to guide future improvements to components and content</p>
+      <ul class= product-findings-list>
+        <li><p>Submitting abstracts</p></li>
+        <li><p>Reporting licensing and product releases</p></li>
+        <li><p>Receiving royalty payments </p></li>
+      </ul>
+
+      <h4 class="document-findings-headline">Count of Document Types: <strong>81%</strong> of site documents are PDFs.</h4>
+      <figure class="documnent-findings">
+        <img class= "document-findings-image" src="images/NIH/findings-documents.png" alt="page distribution findings"></img>
+        <figcaption>Document findingss</figcaption>
+        <p>Recommendation: Improve engagement by converting documents to HTML content (graphs, charts and other media) within site pages</p>
+      </figure>
+
+      <h4 class="rss-findings-headline">Common Discrepancies Found in Listing RSS Feeds: <strong>10</strong> RSS feeds were omitted from feed library.</h4>
+      <figure class="rss-findings">
+        <img class= "rss-findings-image" src="images/NIH/findings-rss.png" alt="page distribution findings"></img>
+        <figcaption>RSS feed dindings</figcaption>
+        <p>Recommendation: Recommendation: Consolidate all RSS feeds on one page.</p>
+      </figure>
+
+
+
+      <h4 class="Multimedia-findings-headline">The Inclusion of Multimedia Content in Articles: <strong>69%</strong> of news articles  don’t contain multimedia.</h4>
+      <figure class="multimedia-findings">
+        <img class= "multimedia-findings-image" src="images/NIH/findings-multimedia.png" alt="page distribution findings"></img>
+        <figcaption>multimedia-findings</figcaption>
+        <p>Recommendation: Include multimedia in articles to improve engagement</p>
+      </figure>
+
+      <h4 class="global-navigation-findings-headline">Global navigation presented several problems</h4>
+        <p class="navigation-findings-content">The content audit revealed many instances where we may improve the navigation structure to meet the strategic priority to facilitate more resonant matches between potential partners and NIH’s technology that ultimately leads to more licensing agreements.</p>
+        <p class="current-experience-headline">Current experience</p>
+        <ul class= current-experience-list>
+          <li><p>Information not where expected</p></li>
+          <li><p>Navigational logic inconsistent</p></li>
+        </ul>
+        <p class="opportunities-for-improvement-headline">Opportunities for iprovement</p>
+        <ul class="opportunties-for-improvement-list">
+          <li><p>Reconsider top level navigation content grouping</p></li>
+          <li><p>Provide more detailed descriptions at the top level and drop-down state</p></li>
+          <li><p>Present options with consideration of anticipated user flows</p></li>
+        </ul>
+
+        <h3 class="next-steps-after-audit-headline">Next Steps after the content audit</h3>
+        <p class="next-steps-after-audit-headline">After presenting the audit to the client, I awaited their consolidated feedback and prepared to present revised data architecture and sitemap updates based on competitive analyses, this content audit and site traffic analytics findings.</p>
+
+    </section>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
