work layoing out the conducting the content audit section

--- a/nih.html
+++ b/nih.html
@@ -79,7 +79,7 @@
       <img class="case-study-hero-image" src="images/nih-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="300px"></img>
     </section>
 
-    <section class="floodlight-summary">
+    <section class="nih-summary">
 
         <h2 class="project-overview-headline">Project overview</h2>
 
@@ -143,13 +143,13 @@
         <li><p>Preparing a comprehensive prototype and user testing considerations for a future stage</p></li>
         <li><p>Providing recommendations on a revised sitemap per content audit findings</p></li>
       </ul>
-      <p class="">Generating an XML sitemap revealed that <strong>over 6,000</strong> pages existed on the site.</p>
+      <p class="content-audit-intro-close">Generating an XML sitemap revealed that <strong>over 6,000</strong> pages existed on the site.</p>
       <h4 class="xml-sitemap-headline">The XML Sitemap</h4>
       <figure class="xml-sitemap">
         <img class= "xml-sitemap-image" src="images/NIH/xml-sitemap.png" alt="NIH XML Sitemap"></img>
         <figcaption> The XML Sitemap</figcaption>
       </figure>
-      <p class="">I created an excel-based content audit. Pages anchored to the navigation are presented in relation to the current navigation structure. Orphan pages are grouped and presented alongside pages of the same template or type.</p>
+      <p class="excel-content-intro">I created an excel-based content audit. Pages anchored to the navigation are presented in relation to the current navigation structure. Orphan pages are grouped and presented alongside pages of the same template or type.</p>
       <h4 class="content-snapshot-headline">Existing site content</h4>
       <figure class="content-snapshot">
         <img class= "content-snapshot-image" src="images/NIH/content-snapshot.png" alt="NIH Content Snapshot"></img>
@@ -158,7 +158,7 @@
 
       <h3 class="audit-navigation-headline">Pages anchored to navigation</h3>
       <p class="audit-navigation-content"><strong>132 pages</strong> are listed in primary and secondary navigation, excluding large groups of like-templated pages.</p>
-      <ul class="navigation-audit-ist">
+      <ul class="navigation-audit-list">
         <li><p>Date captured</p>
           <ul class="data-captured-sublist">
             <li><p>Page title</p></li>
@@ -233,7 +233,7 @@
 
       <h3 class="audit-inventors-headline">Inventors</h3>
       <p class="audit-inventors-content"><strong>3,608 pages</strong> list all inventions by each inventor.</p>
-      <ul class="inventor-audit-ist">
+      <ul class="inventor-audit-list">
         <li><p>Date captured</p>
           <ul class="data-captured-sublist">
             <li><p>Page title</p></li>
@@ -251,7 +251,7 @@
 
       <h3 class="audit-products-headline">Products</h3>
       <p class="audit-products-content"><strong>202 pages </strong>are in the product showcase including a table of contents and pages for each product.</p>
-      <ul class="products-audit-ist">
+      <ul class="products-audit-list">
         <li><p>Date captured</p>
           <ul class="data-captured-sublist">
             <li><p>Page title</p></li>
@@ -276,7 +276,7 @@
 
       <h3 class="audit-documents-headline">Documents</h3>
       <p class="audit-documents-content"><strong>156 PDF & Word documents</strong> linked are to through out the site.</p>
-      <ul class="inventor-documents-ist">
+      <ul class="inventor-documents-list">
         <li><p>Date captured</p>
           <ul class="data-captured-sublist">
             <li><p>Page title</p></li>
@@ -294,7 +294,7 @@
 
       <h3 class="audit-staff-headline">Staff</h3>
       <p class="audit-staff-content"><strong>47 pages </strong>feature staff profiles and indexes of staff profiles organized by last initial.</p>
-      <ul class="inventor-staff-ist">
+      <ul class="inventor-staff-list">
         <li><p>Date captured</p>
           <ul class="data-captured-sublist">
             <li><p>Page title</p></li>
@@ -311,8 +311,8 @@
       </figure>
 
       <h3 class="audit-rss-headline">RSS Feeds</h3>
-      <p class="audit-inventors-content"><strong>66 RSS feed files (.xml)</strong> are available for addition to a user’s feed reader.</p>
-      <ul class="inventor-audit-ist">
+      <p class="audit-rss-content"><strong>66 RSS feed files (.xml)</strong> are available for addition to a user’s feed reader.</p>
+      <ul class="audit-rss-list">
         <li><p>Date captured</p>
           <ul class="data-captured-sublist">
             <li><p>Page title</p></li>
@@ -330,8 +330,8 @@
       </figure>
 
       <h3 class="audit-news-headline">News</h3>
-      <p class="audit-newd-content"><strong>48 news & event articles</strong> highlight updates from OTT.</p>
-      <ul class="inventor-news-list">
+      <p class="audit-news-content"><strong>48 news & event articles</strong> highlight updates from OTT.</p>
+      <ul class="audit-news-list">
         <li><p>Date captured</p>
           <ul class="data-captured-sublist">
             <li><p>Page title</p></li>
