updated NIH study and added to homepage feature.

--- a/nih.html
+++ b/nih.html
@@ -382,14 +382,14 @@
       <figure class="navigation-content-findings">
         <img class= "navigation-content-findings-image" src="images/NIH/findings-navigation.png" alt="page distribution findings"></img>
         <figcaption>Navigation content</figcaption>
-        <p><strong>Recommendation:</strong> Adjust navigation to encourage engagement with licensing related content</p>
+        <p class="navigation-content-recommendation"><strong>Recommendation:</strong> Adjust navigation to encourage engagement with licensing related content</p>
       </figure>
 
       <h4 class="page-findings-headline">The majority of site content lies in technology abstracts and inventor listings</h4>
       <figure class="page-findings">
         <img class= "page-findings-image" src="images/NIH/findings-pages.png" alt="page distribution findings"></img>
         <figcaption>page distributions</figcaption>
-        <p><strong>Recommendation</strong>: Update the technology abstract template to improve readability</p>
+        <p class="page-findings-recommendation"><strong>Recommendation</strong>: Update the technology abstract template to improve readability</p>
       </figure>
 
       <h4 class="abstract-findings-headline">Disease Area Focus of Technology Abstracts: A sample of 100 abstracts revealed that <strong>Cancer</strong> and <strong>Virology </strong>are most studied, but<strong>18% are difficult to classify</strong>.</h4>
@@ -421,7 +421,7 @@
       </figure>
 
       <h4 class="reviewing-inventory-pages-headline">Discovering Broken Inventory Pages</h4>
-      <ul class= reviewing-inventory-pages-list>
+      <ul class="reviewing-inventory-pages-list">
         <li><p>Technology abstract links to more inventions by inventor</p></li>
         <li><p>Inventor’s inventory breadcrumbs include link to current page(3) and “NIH Opportunities from Inventor” (4).</p></li>
         <li><p>This page is broken and returns no results.</p></li>
@@ -430,12 +430,12 @@
       <figure class="reviewing-inventory-pages">
         <img class= "reviewing-inventory-pages-image" src="images/NIH/findings-inventory-pages.png" alt="page distribution findings"></img>
         <figcaption>Probelms with inventory pages</figcaption>
-        <p>Recommendations: Verify path of all breadcrumbs and delete 1,329 broken inventor inventory pages</p>
+        <p class="reviewing-inventory-recommendation">Recommendations: Verify path of all breadcrumbs and delete 1,329 broken inventor inventory pages</p>
       </figure>
 
       <h4 class="product-findings-headline"> Count of Product Releases by Institutes and Centers (ICs):<strong>4 out of 11</strong> ICs are responsible for<strong>94%</strong> of published product releases.</h4>
-      <p>Recommendations: Explore IC user experience to guide future improvements to components and content</p>
-      <ul class= product-findings-list>
+      <p class="product-findings-recommendation">Recommendations: Explore IC user experience to guide future improvements to components and content</p>
+      <ul class="product-findings-list">
         <li><p>Submitting abstracts</p></li>
         <li><p>Reporting licensing and product releases</p></li>
         <li><p>Receiving royalty payments </p></li>
@@ -445,41 +445,41 @@
       <figure class="documnent-findings">
         <img class= "document-findings-image" src="images/NIH/findings-documents.png" alt="page distribution findings"></img>
         <figcaption>Document findingss</figcaption>
-        <p>Recommendation: Improve engagement by converting documents to HTML content (graphs, charts and other media) within site pages</p>
+        <p class="document-findings-recommendation">Recommendation: Improve engagement by converting documents to HTML content (graphs, charts and other media) within site pages</p>
       </figure>
 
       <h4 class="rss-findings-headline">Common Discrepancies Found in Listing RSS Feeds: <strong>10</strong> RSS feeds were omitted from feed library.</h4>
       <figure class="rss-findings">
         <img class= "rss-findings-image" src="images/NIH/findings-rss.png" alt="page distribution findings"></img>
         <figcaption>RSS feed dindings</figcaption>
-        <p>Recommendation: Recommendation: Consolidate all RSS feeds on one page.</p>
+        <p class="rss-findings-recommendation">Recommendation: Consolidate all RSS feeds on one page.</p>
       </figure>
 
 
 
-      <h4 class="Multimedia-findings-headline">The Inclusion of Multimedia Content in Articles: <strong>69%</strong> of news articles  don’t contain multimedia.</h4>
+      <h4 class="multimedia-findings-headline">The Inclusion of Multimedia Content in Articles: <strong>69%</strong> of news articles  don’t contain multimedia.</h4>
       <figure class="multimedia-findings">
         <img class= "multimedia-findings-image" src="images/NIH/findings-multimedia.png" alt="page distribution findings"></img>
         <figcaption>multimedia-findings</figcaption>
-        <p>Recommendation: Include multimedia in articles to improve engagement</p>
+        <p class="multimedia-findings-recommendation">Recommendation: Include multimedia in articles to improve engagement</p>
       </figure>
 
       <h4 class="global-navigation-findings-headline">Global navigation presented several problems</h4>
-        <p class="navigation-findings-content">The content audit revealed many instances where we may improve the navigation structure to meet the strategic priority to facilitate more resonant matches between potential partners and NIH’s technology that ultimately leads to more licensing agreements.</p>
-        <p class="current-experience-headline">Current experience</p>
-        <ul class= current-experience-list>
-          <li><p>Information not where expected</p></li>
-          <li><p>Navigational logic inconsistent</p></li>
-        </ul>
-        <p class="opportunities-for-improvement-headline">Opportunities for iprovement</p>
-        <ul class="opportunties-for-improvement-list">
-          <li><p>Reconsider top level navigation content grouping</p></li>
-          <li><p>Provide more detailed descriptions at the top level and drop-down state</p></li>
-          <li><p>Present options with consideration of anticipated user flows</p></li>
-        </ul>
+      <p class="navigation-findings-content">The content audit revealed many instances where we may improve the navigation structure to meet the strategic priority to facilitate more resonant matches between potential partners and NIH’s technology that ultimately leads to more licensing agreements.</p>
+      <p class="current-experience-headline">Current experience</p>
+      <ul class="current-experience-list">
+        <li><p>Information not where expected</p></li>
+        <li><p>Navigational logic inconsistent</p></li>
+      </ul>
+      <p class="opportunities-for-improvement-headline">Opportunities for iprovement</p>
+      <ul class="opportunties-for-improvement-list">
+        <li><p>Reconsider top level navigation content grouping</p></li>
+        <li><p>Provide more detailed descriptions at the top level and drop-down state</p></li>
+        <li><p>Present options with consideration of anticipated user flows</p></li>
+      </ul>
 
-        <h3 class="next-steps-after-audit-headline">Next steps after the content audit</h3>
-        <p class="next-steps-after-audit-intro">After presenting the audit to the client, I awaited their consolidated feedback and prepared to present revised data architecture and sitemap updates based on competitive analyses, this content audit and site traffic analytics findings.</p>
+      <h3 class="next-steps-after-audit-headline">Next steps after the content audit</h3>
+      <p class="next-steps-after-audit-intro">After presenting the audit to the client, I awaited their consolidated feedback and prepared to present revised data architecture and sitemap updates based on competitive analyses, this content audit and site traffic analytics findings.</p>
 
     </section>
 
