--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
     <section class="hero">
-      <h1 class="hero-headline">Hi, I’m Jess, a lead UX designer from New York</h1>
+      <h1 class="hero-headline">Hi, I’m Jess, a UX design lead from New York</h1>
       <p class="hero-copy">I specialize in creating compelling digital experiences that drive user engagement. Understanding users, business objectives and their symbiotic relationship is at the core of my practice.</p>
       <button onclick="window.location.href = '#work';">Read case studies</button>
 
